Bug fixes on lab1

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html><head>
+<html lang="ru"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>О мне | Vasylyev Dev</title>
   <link href="index_files/base.css" rel="stylesheet">
   <meta name="viewport" content="width=deivice-width">
@@ -114,9 +114,10 @@
         <div>
           <img class="illustration" src="index_files/orator.jpg" alt="orator">
           <h3>Оратор</h3>
-          <p>Ещё со школы я всегда был лицом комманды, и не испытывал 
-проблем с презентацией чего-либо. Также без проблем могу 
-импровизировать. Ходил на курсы оратороского мастерства.</p>
+          <p>
+            Ещё со школы я всегда был лицом комманды, и не испытывал 
+            проблем с презентацией чего-либо. Также без проблем могу 
+            импровизировать. Ходил на курсы оратороского мастерства.</p>
         </div>
       </li>
       <li>
@@ -133,17 +134,19 @@
 
 <section class="about-text">
     <h2>Обо мне</h2>
-    <p class="big-text">Всем привет, меня зовут Кирилл. Уже 5 лет опыт 
-разработки, из них 2 года коммерческой. В школьные годы был 
-олимпиадником по истории и информатики. Окончил школу с золотой медалью.
- Сейчас обучайюсь в <a href="https://mospolytech.ru/">Московском Политехе</a>,
- 2 курс, специльность - Информационные технологии управления бизнессом. 
-Паралельно с учебой я выполняю заказы на фрилансе. Люблю путишествовать и
- рок. Состоял в двух рок группах.</p>
+    <p class="big-text">
+      Всем привет, меня зовут Кирилл. Уже 5 лет опыт 
+      разработки, из них 2 года коммерческой. В школьные годы был 
+      олимпиадником по истории и информатики. Окончил школу с золотой медалью.
+      Сейчас обучайюсь в <a href="https://mospolytech.ru/">Московском Политехе</a>,
+      2 курс, специльность - Информационные технологии управления бизнессом. 
+      Паралельно с учебой я выполняю заказы на фрилансе. Люблю путишествовать и
+      рок. Состоял в двух рок группах.
+  </p>
 </section>
 
   
-    <footer>
+<footer>
   <p>Кирилл Васильев 2023</p>
 </footer>
 
