global bux fixes

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>О мне | Vasylyev Dev</title>
   <link href="index_files/base.css" rel="stylesheet">
   <meta name="viewport" content="width=deivice-width">
@@ -102,7 +103,6 @@
     <ul class="block-list">
       <li>
         <div>
-
           <img class="illustration" src="index_files/non-conflict.jpg" alt="non-conflict">
           <h3>Неконфликтный</h3>
           <p>Все конфликты можно решыть без личностных оскорблений. 
@@ -130,8 +130,6 @@
       </li>
     </ul>
 </section>
-    <ul>
-
 <section class="about-text">
     <h2>Обо мне</h2>
     <p class="big-text">
@@ -159,5 +157,5 @@
       
     })
 </script>
-
-</ul></body></html>
+</body>
+</html>
