--- a/lab2/pages/feedback.html
+++ b/lab2/pages/feedback.html
@@ -7,7 +7,7 @@
     <link href="../static/styles/main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-    <title>Главная</title>
+    <title>Обратная связь</title>
 </head>
 <body id="feedback-page" class="dark-theme">
     <div class = "centre-container">
