--- a/lab2/pages/feedback.html
+++ b/lab2/pages/feedback.html
@@ -16,15 +16,15 @@
             <form method="POST" action="#">
                 <a onclick="toFirstPart()" class="no-background hidden" id="go_back_button">Назад</a>
                 <label id="full_name_block">
-                    <h5>ФИО</h5>
+                    ФИО
                     <input required type="text" placeholder="Вася Пупкин Федорович" name="full_name">
                 </label>
                 <label id="email_block">
-                    <h5>Адрес электронной почты</h5>
+                    Адрес электронной почты
                     <input required type="text" placeholder="Ваш пароль" name="pass">
                 </label>
                 <div id="source_block">
-                    <h5>Откуда вы узнали нас ?</h5>
+                    Откуда вы узнали нас ?
                     <label class="inline small-text">
                         <input value="1" type="radio" name="pr_source">
                         Рассказали друзья
@@ -36,7 +36,7 @@
                 </div>
                 <a class="button" onclick="toSecondPart()" id="next_form_button">Далее</a>
                 <label id="category_block" class="hidden">
-                    <h5>Категория обращения</h5>
+                    Категория обращения
                     <select name = "category">
                         <option value="1">Предложение</option>
                         <option value="2">Благодарность</option>
@@ -44,11 +44,11 @@
                     </select>
                 </label>
                 <label id="request_text_block" class="hidden">
-                    <h5>Текст обращения</h5>
+                    Текст обращения
                     <textarea name = "request-text"></textarea>
                 </label>
                 <label id="addition_block" class="hidden">
-                    <h5>Вложение</h5>
+                    Вложение
                     <input type="file" name="addition">
                 </label>
                 <label id="trust_personal_data_block" class="small-text hidden">
