changed form action

--- a/lab2/pages/login.html
+++ b/lab2/pages/login.html
@@ -13,7 +13,7 @@
     <div class = "centre-container">
         <div class = "centered glass-block">
             <h2>Вход в систему</h2>
-            <form method="POST" action="#">
+            <form method="POST" action="https://httpbin.org/post">
                 <label>
                     Логин
                     <input required type="text" placeholder="Логин" name="login">
