lab3 without calculator js

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
     <title>Vasylyev Dev</title>
 </head>
-<body class = "black-theme">
+<body class = "white-theme">
     <main>
         <section class = "hero-block centre-container blue-gradient-bg">
             <div class = "container">
@@ -63,19 +63,19 @@
                 <h2 class="section-heading">Почему мы ?</h2>
                 <div class="grid-layout">
                     <div class="grid-item">
-                        <img class="grid-item-img" src="static/images/rocket.gif">
+                        <img class="grid-item-img" src="static/images/rocket.gif" alt="рокета">
                         <h3>Высокая скорость</h3>
                     </div>
                     <div class="grid-item">
-                        <img class="grid-item-img" src="static/images/translate.gif">
+                        <img class="grid-item-img" src="static/images/translate.gif" alt="multi-languages">
                         <h3>Поддержка нескольких язков</h3>
                     </div>
                     <div class="grid-item">
-                        <img class="grid-item-img" src="static/images/heart.gif">
+                        <img class="grid-item-img" src="static/images/heart.gif" alt="love">
                         <h3>Индивидуальный подход</h3>
                     </div>
                     <div class="grid-item">
-                        <img class="grid-item-img" src="static/images/24.gif">
+                        <img class="grid-item-img" src="static/images/24.gif" alt="24">
                         <h3>Всегда на связи</h3>
                     </div>
                 </div>
