--- a/lab3/pages/calculator.html
+++ b/lab3/pages/calculator.html
@@ -16,16 +16,17 @@
                 <div class = "hero-flex">
                     <div>
                         <h1 class = "hero-heading">Калькулятор стоимости телеграмм бота</h1>
-                        <a class="button" href = "#">Расчитать</a>
+                        <a class="button" href = "#calculator">Расчитать</a>
                     </div>
                     <img src="../static/images/cassa.png" alt = "Телеграмм бот">
                 </div>
             </div>
         </section>
-        <section class="">
+        <section id="calculator" class="">
             <div class="container">
               <div>
                 <h3>Наличие базы данных</h3>
+                <fieldset class="flex-fieldset">
                 <label>
                   <input type="radio" id="have_db" name="have_db" value="Да" checked/>
                   Да
@@ -34,48 +35,46 @@
                   <input type="radio" id="have_no_db" name="have_db" value="Нет"/>
                   Нет
                 </label>
+                </fieldset>
                 <h3>Работа с сервисами</h3>
+                <fieldset class="flex-fieldset">
                 <label>
                   <input id="gsheets_service" type="checkbox"/>
-                  <img src="../static/images/sheets.png" alt="Google sheets"/>
+                  <img class="icon" src="../static/images/sheets.png" alt="Google sheets"/>
                 </label>
                 <label>
                   <input id="gforms_service" type="checkbox"/>
-                  <img src="../static/images/forms.png" alt="Google forms"/>
+                  <img class="icon" src="../static/images/forms.png" alt="Google forms"/>
                 </label>
                 <label>
                   <input id="gdrive_service" type="checkbox"/>
-                  <img src="../static/images/drive.png" alt="Google drive"/>
+                  <img class="icon" src="../static/images/drive.png" clas="icon" alt="Google drive"/>
                 </label>
+                </fieldset>
                 <h3>Работа с телеграмм</h3>
+                <fieldset class="flex-fieldset">
                 <label>
                   <input id="groups_manage" type="checkbox"/>
-                  <img src="../static/images/sheets.png" alt="Grops manage"/>
+                  <img src="../static/images/group.png" class="icon" alt="Grops manage"/>
                   Управление групами
                 </label>
                 <label>
                   <input id="chanel_manage" type="checkbox"/>
-                  <img src="../static/images/sheets.png" alt="Chanels manage"/>
+                  <img src="../static/images/chanel.png" class="icon" alt="Chanels manage"/>
                   Управление каналами
                 </label>
                 <label>
                   <input id="money_manage" type="checkbox"/>
-                  <img src="../static/images/sheets.png" alt="Money manage"/>
+                  <img src="../static/images/money.png" class="icon" alt="Money manage"/>
                   Управление оплатой
                 </label>
+                </fieldset>
                 <label>
-                Взаимодействие с клиентом
+                Взаимодействие с клиентом: <output id="communicationValue"></output>
                 <input id="communicationInput" type="range" min="0" max="3" value="0" step="1" /> 
-                <datalist id="communicationValues">
-                  <option value="0" label="Нет"></option>
-                  <option value="1" label="Минимальное"></option>
-                  <option value="2" label="Много"></option>
-                  <option value="3" label="Много на разных языках"></option>
-                </datalist>
                 </label>
-                <p>Значение: <output id="communicationValue"><output></p>
               </div>
-              <p>Примерная стоимость: <span id = "amount"></span></p>
+              <h3>Примерная стоимость: <output id="amount"></output></h3>
             </div>
         </section>
     </main>
@@ -85,12 +84,74 @@
 </body>
 <link href="../static/styles/main.css" rel="stylesheet">
 <script>
+// GETTTING ALL INPUTS
+//
+
+const have_db = document.querySelector("#have_db");
+const have_no_db = document.querySelector("#have_no_db");
+const gsheets_service = document.querySelector("#gsheets_service");
+const gforms_service = document.querySelector("#gforms_service");
+const gdrive_service = document.querySelector("#gdrive_service");
+const groups_manage = document.querySelector("#groups_manage");
+const chanel_manage = document.querySelector("#chanel_manage");
+const money_manage = document.querySelector("#money_manage");
+
 const communicationValue = document.querySelector("#communicationValue");
 const communicationInput = document.querySelector("#communicationInput");
+const amount = document.querySelector("#amount");
 
-communicationValue.textContent = communicationInput.value;
+const communicationValues = {
+  0: "Нет",
+  1: "Минимальное",
+  2: "Много",
+  3: "Много на разных языках",
+}
+
+const communicationAmounts = {
+  0: 0,
+  1: 1000,
+  2: 3000,
+  3: 10000,
+}
+
+communicationValue.textContent = communicationValues[communicationInput.value];
 communicationInput.addEventListener("input", (event) => {
-  communicationValue.textContent = event.target.value;
+  communicationValue.textContent = communicationValues[event.target.value];
 });
+
+function getCurrent () {
+  let initialAmount = 5000;
+  if (have_db.checked) initialAmount += 2000;
+  if (gsheets_service.checked) initialAmount += 1000;
+  if (gforms_service.checked) initialAmount += 1000;
+  if (gdrive_service.checked) initialAmount += 1000;
+  if (groups_manage.checked) initialAmount += 2000;
+  if (chanel_manage.checked) initialAmount += 1000;
+  if (money_manage.checked) initialAmount += 3000;
+  return initialAmount + communicationAmounts[communicationInput.value];
+
+}
+
+amount.textContent = getCurrent();
+
+const inputs = [
+  have_db,
+  have_no_db,
+  gsheets_service,
+  gforms_service,
+  gdrive_service,
+  groups_manage,
+  chanel_manage,
+  money_manage,
+  communicationInput,
+]
+
+inputs.map(input => {
+  input.addEventListener("input", (event) => {
+  amount.textContent = getCurrent();
+});
+})
+
+
 </script>
 </html>
