--- a/lab3/pages/calculator.html
+++ b/lab3/pages/calculator.html
@@ -74,7 +74,7 @@
                 <input id="communicationInput" type="range" min="0" max="3" value="0" step="1" /> 
                 </label>
               </div>
-              <h3>Примерная стоимость: <output id="amount"></output></h3>
+              <h3>Примерная стоимость: <output class="blue-gradient" id="amount"></output></h3>
             </div>
         </section>
     </main>
