--- a/lab3/pages/calculator.html
+++ b/lab3/pages/calculator.html
@@ -7,6 +7,7 @@
     <link href="../static/styles/main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+    <script src="../static/scripts/calculator.js" defer></script>
     <title>Vasylyev Dev</title>
 </head>
 <body class = "dark-theme">
@@ -40,38 +41,38 @@
                 <fieldset class="flex-fieldset">
                 <label>
                   <input id="gsheets_service" type="checkbox">
-                  <img class="icon" src="../static/images/sheets.png" alt="Google sheets"/>
+                  <img class="icon" src="../static/images/sheets.png" alt="Google sheets">
                 </label>
                 <label>
                   <input id="gforms_service" type="checkbox">
-                  <img class="icon" src="../static/images/forms.png" alt="Google forms"/>
+                  <img class="icon" src="../static/images/forms.png" alt="Google forms">
                 </label>
                 <label>
                   <input id="gdrive_service" type="checkbox">
-                  <img class="icon" src="../static/images/drive.png" alt="Google drive"/>
+                  <img class="icon" src="../static/images/drive.png" alt="Google drive">
                 </label>
                 </fieldset>
                 <h3>Работа с телеграмм</h3>
                 <fieldset class="flex-fieldset">
                 <label>
                   <input id="groups_manage" type="checkbox">
-                  <img src="../static/images/group.png" class="icon" alt="Grops manage"/>
+                  <img src="../static/images/group.png" class="icon" alt="Grops manage">
                   Управление групами
                 </label>
                 <label>
                   <input id="chanel_manage" type="checkbox">
-                  <img src="../static/images/chanel.png" class="icon" alt="Chanels manage"/>
+                  <img src="../static/images/chanel.png" class="icon" alt="Chanels manage">
                   Управление каналами
                 </label>
                 <label>
                   <input id="money_manage" type="checkbox">
-                  <img src="../static/images/money.png" class="icon" alt="Money manage"/>
+                  <img src="../static/images/money.png" class="icon" alt="Money manage">
                   Управление оплатой
                 </label>
                 </fieldset>
                 <label>
                 Взаимодействие с клиентом: <output id="communicationValue"></output>
-                <input id="communicationInput" type="range" min="0" max="3" value="0" step="1" /> 
+                <input id="communicationInput" type="range" min="0" max="3" value="0" step="1"> 
                 </label>
               </div>
               <h3>Примерная стоимость: <output class="blue-gradient" id="amount"></output></h3>
@@ -82,74 +83,4 @@
         <p>Васильев Кирилл 2023</p>
     </footer>
 </body>
-<script>
-// GETTTING ALL INPUTS
-//
-
-const have_db = document.querySelector("#have_db");
-const have_no_db = document.querySelector("#have_no_db");
-const gsheets_service = document.querySelector("#gsheets_service");
-const gforms_service = document.querySelector("#gforms_service");
-const gdrive_service = document.querySelector("#gdrive_service");
-const groups_manage = document.querySelector("#groups_manage");
-const chanel_manage = document.querySelector("#chanel_manage");
-const money_manage = document.querySelector("#money_manage");
-
-const communicationValue = document.querySelector("#communicationValue");
-const communicationInput = document.querySelector("#communicationInput");
-const amount = document.querySelector("#amount");
-
-const communicationValues = {
-  0: "Нет",
-  1: "Минимальное",
-  2: "Много",
-  3: "Много на разных языках",
-}
-
-const communicationAmounts = {
-  0: 0,
-  1: 1000,
-  2: 3000,
-  3: 10000,
-}
-
-communicationValue.textContent = communicationValues[communicationInput.value];
-communicationInput.addEventListener("input", (event) => {
-  communicationValue.textContent = communicationValues[event.target.value];
-});
-
-function getCurrent () {
-  let initialAmount = 5000;
-  if (have_db.checked) initialAmount += 2000;
-  if (gsheets_service.checked) initialAmount += 1000;
-  if (gforms_service.checked) initialAmount += 1000;
-  if (gdrive_service.checked) initialAmount += 1000;
-  if (groups_manage.checked) initialAmount += 2000;
-  if (chanel_manage.checked) initialAmount += 1000;
-  if (money_manage.checked) initialAmount += 3000;
-  return initialAmount + communicationAmounts[communicationInput.value];
-
-}
-
-amount.textContent = getCurrent();
-
-const inputs = [
-  have_db,
-  have_no_db,
-  gsheets_service,
-  gforms_service,
-  gdrive_service,
-  groups_manage,
-  chanel_manage,
-  money_manage,
-  communicationInput,
-]
-
-inputs.map(input => {
-  input.addEventListener("input", (event) => {
-  amount.textContent = getCurrent();
-});
-})
-
-</script>
 </html>
