--- a/lab3/pages/calculator.html
+++ b/lab3/pages/calculator.html
@@ -71,9 +71,10 @@
                 </label>
                 </fieldset>
                 <label>
-                Взаимодействие с клиентом: <output id="communicationValue"></output>
+                Взаимодействие с клиентом:
                 <input id="communicationInput" type="range" min="0" max="3" value="0" step="1"> 
                 </label>
+                <output id="communicationValue"></output>
               </div>
               <h3>Примерная стоимость: <output class="blue-gradient" id="amount"></output></h3>
             </div>
