--- a/lab3/index.html
+++ b/lab3/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/styles/reset.css" rel="stylesheet">
     <link href="static/styles/main.css" rel="stylesheet">
+    <link href="static/styles/print.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
     <title>Vasylyev Dev</title>
