--- a/lab4/tic-tac-toe/index.html
+++ b/lab4/tic-tac-toe/index.html
@@ -25,6 +25,10 @@
   <div class="centre-container">
     <div class="field"></div>
   </div>
+  <footer>
+    <p>Васильев Кирилл 2023</p>
+  </footer>
   <script src="./static/scripts/script.js"></script>
+
 </body>
 </html>
