--- a/lab4/calc/index.html
+++ b/lab4/calc/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+
+    <link rel="stylesheet" href="./static/reset.css">
+    <link rel="stylesheet" href="./static/main.css">
     <script src="static/main.js" defer></script>
     <title>Калькулятор</title>
 </head>
-<body>
-    <main>
-        <div class="calc-container">
+<body class="dark-theme">
+    <main class="centre-container">
+        <div class="glass-block">
             <div class="screen">
                 <span></span>
             </div>
@@ -44,5 +47,8 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>Васильев Кирилл 2023</p>
+    </footer>
 </body>
 </html>
