Move task finaly done

--- a/hw5/index.html
+++ b/hw5/index.html
@@ -54,7 +54,7 @@
                                         <span class="task-description d-none">Описание задачи</span>
                                     </div>
                                     <div class="actions invisible">
-                                        <a class="move-btn move-to-do" title="Переместить в колонку To Do">
+                                        <a class="move-btn move-to-do" id="moveToDo" title="Переместить в колонку To Do">
                                             <i class="fas fa-arrow-left"></i>
                                         </a>
                                         <a data-bs-toggle="modal" data-bs-target="#showModal" data-action="show"
@@ -68,7 +68,7 @@
                                         <a data-bs-toggle="modal" data-bs-target="#removeModal" data-action="remove" title="Удалить">
                                             <i class="fas fa-trash-o"></i>
                                         </a>
-                                        <a class="move-btn move-done" title="Переместить в колонку Done">
+                                        <a class="move-btn move-done" id="moveDone" title="Переместить в колонку Done">
                                             <i class="fas fa-arrow-right"></i>
                                         </a>
                                     </div>
